--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.12)
-project(4__groupProject)
+project(4_groupProject)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(4__groupProject main.cpp Weapons/Weapon.cpp Weapons/Weapon.h Movement/MoveHandler.cpp Movement/MoveHandler.h Combat/CombatHandler.cpp Combat/CombatHandler.h Character/Character.cpp Character/Character.h Player/Player.cpp Player/Player.h Character/Enemy.cpp Character/Enemy.h Inventory/Inventory.cpp Inventory/Inventory.h)
+add_executable(4_groupProject main.cpp Weapons/Weapon.cpp Weapons/Weapon.h Movement/MoveHandler.cpp Movement/MoveHandler.h Combat/CombatHandler.cpp Combat/CombatHandler.h Character/Character.cpp Character/Character.h Player/Player.cpp Player/Player.h Character/Enemy.cpp Character/Enemy.h Inventory/Inventory.cpp Inventory/Inventory.h)
